<resources>
    <string name="app_name">PhotoOrganizer</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="settings">Settings</string>
    <string name="take_photo">Take photo</string>
    <string name="camera">camera</string>
    <string name="gallery">Gallery</string>
    <string name="group_management">Group management</string>
    <string name="label">label</string>
    <string name="image">image</string>
    <string name="create_join">Create or join a group</string>
    <string name="create_group">Create group</string>
    <string name="join_a_group">Join a group</string>
    <string name="join_group_hint">Scan a QR code</string>
    <string name="leave_group">Leave group</string>
    <string name="delete_a_group">Delete a group</string>
    <string name="delete_group_confirmation">Are you sure you want to delete this group?</string>
    <string name="leave_group_confirmation">Are you sure you want to leave this group?</string>
    <string name="group_duration">Group duration:</string>
    <string name="minutes">minutes</string>
    <string name="create">Create</string>
    <string name="group_information">Group information</string>
    <string name="name">Name</string>
    <string name="members">Members</string>
    <string name="add">Add</string>
    <string name="expiration">Expiration</string>
    <string name="scan_to_join">Scan to join!</string>
    <string name="group_name">Group name:</string>
    <string name="login">Login</string>
    <string name="already">Already registered. Login Me!</string>
    <string name="register_here">Register here!!</string>
    <string name="cancel">Cancel</string>
    <string name="add_member">Add a member</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="join_group_code">Join group with this QR</string>

    <string name="default_notification_channel_id">Default channel</string>
    <string name="default_notification_channel_name">Default channel</string>

    <string name="camera_success">Image uploaded successfully</string>
    <string name="camera_failure">Image could not be uploaded</string>
    <string name="camera_failure_group">Could not take picture because user is not in a group</string>
    <string name="group_create_success">Group created successfully</string>
    <string name="group_create_failure">Group could not be created</string>
    <string name="group_leave_success">Group left successfully</string>
    <string name="group_leave_failure">Group could not be left</string>
    <string name="group_join_success">Group joined successfully</string>
    <string name="group_join_failure">Group could not be joined</string>
    <string name="error_user_null">Could not fetch user.</string>
    <string name="barcode_wait">Barcode found - please wait</string>
    <string name="camera_error">Cannot open camera - exit</string>

</resources>
