<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <Button
        android:id="@+id/create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_group" />

    <Button
        android:id="@+id/join_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_a_group" />

    <Button
        android:id="@+id/delete_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_a_group" />
</LinearLayout>
