<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/groupinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/group_information"
        android:textColor="#001FFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#001FFF" />

        <TextView
            android:id="@+id/name_group"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/name" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiration"
            android:textColor="#001FFF" />

        <TextView
            android:id="@+id/expiration_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="0" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/members"
            android:textColor="#001FFF" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="#001FFF" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
