<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_margin="50dp"
    android:layout_marginBottom="50dp"
    android:layout_marginEnd="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingBottom="20dp"
    android:paddingEnd="10dp"
    android:paddingLeft="100dp"
    android:paddingRight="10dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/name"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ins_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/name"
        android:inputType="text" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/email"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/ins_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:hint="@string/email"
        android:inputType="text"
        android:imeOptions="actionNext"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/password"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ins_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_gravity="center"

        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="#001FFF"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:text="@string/already"
        android:textAllCaps="false"
        android:textColor="#001FFF"
        android:textSize="15dp" />


</LinearLayout>
